welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage)
{
	litMessage();
	if (litMessage=="A")
	{
		gauche();
		avance();
	}
	
	if (litMessage=="A")
	{
		avance();
	}
	if (litMessage=="B")
	{
		avance();
		avance();
	}
	if (litMessage=="C")
	{
		avance();
		avance();
		avance();
	}
	if (litMessage=="X")
	{
		recule();
		recule();
		recule();
	}
	if (litMessage=="Y")
	{
		recule();
		recule();
	}
	if (litMessage=="Z")
	{
		recule();
	}
	if (litMessage=="R")
	{
		droite();
		avance();
	}
	if (litMessage=="I")
	{
		droite();
		droite()
		avance();
	}
}

}